force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <description>제품 정보</description>
    <label>제품</label>
    <nameField>
        <label>제품명</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>