force-app/main/default/objects/Product__c/fields/Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Image_Url__c</fullName>
    <label>제품사진</label>
    <length>255</length>
    <type>Text</type>
</CustomField>