force-app/main/default/objects/Product__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>제품타입</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>노트북</fullName>
            </value>
            <value>
                <fullName>주변기기</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>