force-app/main/default/objects/Product__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>제품가격</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>