force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProductType__c</columns>
    <columns>ProductCode__c</columns>
    <columns>UnitPrice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>