force-app/main/default/objects/Product__c/listViews/laptop.listView-meta.xml
<ListView>
    <fullName>laptop</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductType__c</field>
        <operation>equals</operation>
        <value>Laptop</value>
    </filters>
    <label>노트북</label>
</ListView>