force-app/main/default/objects/Product__c/listViews/others.listView-meta.xml
<ListView>
    <fullName>others</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductType__c</field>
        <operation>equals</operation>
        <value>Accessory</value>
    </filters>
    <label>주변기기</label>
</ListView>